--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
 
               <div class="home-info">
                 <!-- hero hello -->
-                <div id="hello" class="d-flex align-items-center mb-10">
+                <div id="hello" class="d-flex align-items-center mb-6">
                   <span class="emoji me-5">👋</span>
                   <span class="fw-bold fs-3tx">Hello!</span>
                 </div>
 
                 <!-- hero text -->
-                <div class="mb-10">
-                  <div class="fs-2 fw-bold text-gray-800 mb-10"> <span class="highlight-span">Akash</span> is here, <br>
+                <div class="mb-6">
+                  <div class="fs-1 fw-bold text-gray-800 mb-6"> <span class="highlight-span">Akash</span> is here, <br>
                     I Design. I Code. I Keep It Real. 😀
                   </div>
 
-                  <div class="fs-2 fw-normal text-gray-700 mb-10">I
-                    I craft user-friendly interfaces with a developer’s mindset—because good design isn’t just about
+                  <div class="fs-2 fw-normal text-gray-700 mb-6">
+                    I craft user-friendly interfaces with a developer’s mindset because good design isn’t just about
                     looking fancy, it’s about working smoothly. Every pixel has a purpose, every feature meets a need.
-
                     <br><br>
                     Fueled by coffee, I design what’s needed, not just what’s trendy.☕
+
                   </div>
 
                 </div>
@@ -78,8 +78,8 @@
               <div class="col-md-6 col-12 mb-10">
                 <div
                   class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
-                  style="background-color: #FFF7F6; border-color: #ED6961 !important; overflow: hidden;">
-                  <img src="./assets/images/aue-test-1.png" class="h-350px mt-20 ms-20 hover-scale" alt="">
+                  style="background-color: #efe9d2; border-color: #c3a259 !important; overflow: hidden;">
+                  <img src="./assets/images/projects-banners/aue.png" class="h-350px mt-20 ms-20 hover-scale" alt="">
                 </div>
                 <div class="mb-6">
                   <span class="badge-3 badge-3-red me-2">Amarican University
@@ -88,6 +88,22 @@
                 </div>
                 <div class="fw-bold fs-3">A smart, all-in-one platform designed to streamline administration, enhance
                   student success, and drive institutional growth.</div>
+              </div>
+
+              <div class="col-md-6 col-12 mb-10">
+                <div
+                  class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
+                  style="background-color: #FFF7F6; border-color: #d7363e !important; overflow: hidden;">
+                  <img src="./assets/images/projects-banners/soonerspublicschool.png"
+                    class="h-350px mt-20 ms-20 hover-scale" alt="">
+                </div>
+                <div class="mb-6">
+                  <span class="badge-3 badge-3-red me-2">Sooners Public School</span>
+                  <span class="badge-3 badge-3-blue">Web App</span>
+                </div>
+                <div class="fw-bold fs-3">
+                  Sooners Public School is a school in Pakistan, and I designed all the systems for students, parents,
+                  teachers, and the super admin, including admission and course learning outcomes.</div>
               </div>
 
               <div class="col-md-6 col-12 mb-10">
@@ -139,15 +155,17 @@
               <div class="col-md-6 col-12 mb-10">
                 <div
                   class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
-                  style="background-color: #dbedf2; border-color: #223541 !important; overflow: hidden;">
+                  border-color: #336d87;
+                  style="background-color: #dbedf2; border-color: #56a2ba !important; overflow: hidden;">
                   <img src="./assets/images/projects-banners/gogodoc.png" class="h-325px mt-20 hover-scale" alt="">
                 </div>
                 <div class="mb-6">
                   <span class="badge-3 badge-3-dark-blue me-2">Singify</span>
                   <span class="badge-3 badge-3-blue">Mobile App</span>
                 </div>
-                <div class="fw-bold fs-3">Singify is an online music app that connects users with famous singers. Users
-                  can pay to listen to live performances and even sing along with the artists in real-time.
+                <div class="fw-bold fs-3">GogoDoc is a digital platform for booking doctor appointments and managing
+                  medical benefits. It offers a seamless experience for users to consult with doctors and receive
+                  prescriptions online.
 
                 </div>
               </div>
