--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
           <!-- Footer -->
           <footer>
-            <div class="footer-main">
+            <div class="footer-main mb-10">
               <div class="footer-content">
                 <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
                 <p>From understanding user needs to designing seamless interfaces, I specialize in creating exceptional
