--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
 <body>
 
   <!--Main Container Start-->
-  <div class="main-container">
+  <div class="main-container" >
 
     <!-- Main Content Start -->
-    <div class="main-content">
-      <section class="home section">
+    <div class="main-content" >
+      <section class="home section" >
 
-        <div class="container">
+        <div class="container" >
 
           <!-- Hero Scection Start -->
-          <div class="section-padding" id="about">
+          <div class="section-padding"  id="about">
             <div class="row">
 
               <div class="home-info">
                 <!-- hero hello -->
-                <div id="hello" class="d-flex align-items-center mb-6">
-                  <span class="emoji me-5">👋</span>
-                  <span class="fw-bold fs-3tx">Hello!</span>
+                <div class="symbol symbol-75px mb-10">
+                  <img src="assets/images/akash-palandagama.jpg" class="symbol-circle" alt="" />
                 </div>
 
                 <!-- hero text -->
                 <div class="mb-6">
-                  <div class="fs-1 fw-bold text-gray-800 mb-6"> <span class="highlight-span">Akash</span> is here, <br>
+                  <div class="fs-1 fw-bold text-gray-800 mb-6"> 👋 Hello, <span class="highlight-span"> Akash</span> is
+                    here,
                     I Design. I Code. I Keep It Real. 😀
                   </div>
 
@@ -72,7 +72,7 @@
           <!-- Latest Projects Scection Start -->
           <div class="section-padding" id="work">
 
-            <h1 class="fs-3x fw-bold mb-md-15 mb-10">Explore Work</h1>
+            <h1 class="fs-3x fw-bold mb-md-15 mb-10">👨‍💻 Explore Work</h1>
             <div class="row">
 
               <div class="col-md-6 col-12 mb-10">
@@ -82,7 +82,7 @@
                   <img src="./assets/images/projects-banners/aue.png" class="h-350px mt-20 ms-20 hover-scale" alt="">
                 </div>
                 <div class="mb-6">
-                  <span class="badge-3 badge-3-red me-2">Amarican University
+                  <span class="badge-3 badge-3-yellow me-2">Amarican University
                     in the Emirates</span>
                   <span class="badge-3 badge-3-blue">Web App</span>
                 </div>
@@ -160,7 +160,7 @@
                   <img src="./assets/images/projects-banners/gogodoc.png" class="h-325px mt-20 hover-scale" alt="">
                 </div>
                 <div class="mb-6">
-                  <span class="badge-3 badge-3-dark-blue me-2">Singify</span>
+                  <span class="badge-3 badge-3-dark-blue me-2">GogoDoc</span>
                   <span class="badge-3 badge-3-blue">Mobile App</span>
                 </div>
                 <div class="fw-bold fs-3">GogoDoc is a digital platform for booking doctor appointments and managing
@@ -192,7 +192,7 @@
                   <a href="#" target="_blank">Twitter</a>
                 </div>
                 <div class="copyright">
-                  ©2024 Kushantha Charuka • webmade.day
+                  ©2025 Akash Palandagama
                 </div>
               </div>
             </div> -->
