--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
 <body>
 
   <!--Main Container Start-->
-  <div class="main-container" >
+  <div class="main-container">
 
     <!-- Main Content Start -->
-    <div class="main-content" >
-      <section class="home section" >
-
-        <div class="container" >
-
+    <div class="main-content">
+      <section class="home section">
+        <div class="container">
           <!-- Hero Scection Start -->
-          <div class="section-padding"  id="about">
+          <div class="section-padding" id="about">
             <div class="row">
 
               <div class="home-info">
@@ -74,7 +72,6 @@
 
             <h1 class="fs-3x fw-bold mb-md-15 mb-10">👨‍💻 Explore Work</h1>
             <div class="row">
-
               <div class="col-md-6 col-12 mb-10">
                 <div
                   class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
@@ -173,9 +170,77 @@
             </div>
           </div>
 
+          <!-- Experence -->
+          <div class="section-padding" id="experience">
+            <h1 class="fs-3x fw-bold mb-md-15 mb-10">👨‍💻 Experence</h1>
+            <div class="row">
+              <div class="col-12 mb-10 mb-md-15">
+                <div class="d-flex align-items-center mb-5">
+                  <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5">
+                    <img src="assets/images/logos/aue-logo.png" class="h-45px" alt="" />
+                  </div>
+                  <div class="">
+                    <div class="fs-2 fw-semibold">User Experence Developer</div>
+                    <div class="fs-5 text-gray-600">Amarican University in the Emirates | October 2023 - Recent
+                    </div>
+                  </div>
+
+                </div>
+                <div class="fw-semibold text-gray-700 fs-5">
+                  AUE is a leading university in Dubai, UAE, maintaining an in-house ERP system to manage all university
+                  activities, from student registration to alumni affairs. The system covers exams, CLO & PLO
+                  management, VPAA, department chairs, finance, procurement, and all essential business processes
+                  required for efficient university operations. It includes key components such as the Admission &
+                  Registration Database (ARD), Human Resource Management (HRM), Student and Alumni Portal, Employee
+                  Portal, Learning Management System (LMS), Exam Portal, Community Portal, and Workshops with related
+                  UIs. Additionally, the ERP system supports other universities, including KCST, Umm Al Quwain
+                  University, and many more. It is a smart, all-in-one platform designed to streamline administration,
+                  enhance student success, and drive institutional growth.
+                </div>
+              </div>
+              <div class="col-12 mb-10 mb-md-15">
+                <div class="d-flex align-items-center mb-5">
+                  <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5">
+                    <img src="assets/images/logos/archnix-logo.png" class="h-50px w-50px" alt="" />
+                  </div>
+                  <div class="">
+                    <div class="fs-2 fw-semibold">Associate UI UX Designer</div>
+                    <div class="fs-5 text-gray-600">Archnix Pvt Ltd | February 2023 - September
+                      2023</div>
+                  </div>
+
+                </div>
+                <div class="fw-semibold text-gray-700 fs-5">
+                  Archnix is a global tech company specializing in software development, digital marketing, SEO, and
+                  SMM. Founded in 2020 and registered in the UK, it operates in the UK, Canada, Sri Lanka, India, and
+                  the UAE. Archnix focuses on innovative digital solutions, automation, and delivering top-tier user
+                  experiences worldwide.
+                </div>
+              </div>
+              <div class="col-12 mb-10 mb-md-15">
+                <div class="d-flex align-items-center mb-5">
+                  <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5">
+                    <img src="assets/images/logos/enhanzer-logo.png" class="h-50px" alt="" />
+                  </div>
+                  <div class="">
+                    <div class="fs-2 fw-semibold">Intern UI UX Developer</div>
+                    <div class="fs-5 text-gray-600">Enhanzer Pvt Ltd | November 2021 - September
+                      2022</div>
+                  </div>
+
+                </div>
+                <div class="fw-semibold text-gray-700 fs-5">
+                  Enhanzer Pvt Ltd is a Sri Lankan software company specializing in cloud-based ERP solutions and
+                  digital automation. Founded in 2013 and headquartered in Colombo, it helps businesses achieve
+                  sustainable growth through innovative technology and process optimization.
+                </div>
+              </div>
+            </div>
+
+          </div>
           <!-- Footer -->
           <footer>
-            <div class="footer-main mb-10">
+            <div class="footer-main">
               <div class="footer-content">
                 <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
                 <p>From understanding user needs to designing seamless interfaces, I specialize in creating exceptional
@@ -183,19 +248,20 @@
               </div>
             </div>
 
-            <!-- <div class="footer-bottom">
+            <div class="footer-bottom">
               <div class="footer-bottom-content">
+                <div class="copyright">
+                  ©2025 Akash Palandagama
+                </div>
                 <div class="social-links">
                   <a href="#" target="_blank">LinkedIn</a>
                   <a href="#" target="_blank">Dribbble</a>
                   <a href="#" target="_blank">Behance</a>
                   <a href="#" target="_blank">Twitter</a>
                 </div>
-                <div class="copyright">
-                  ©2025 Akash Palandagama
-                </div>
+
               </div>
-            </div> -->
+            </div>
           </footer>
 
         </div>
@@ -216,7 +282,7 @@
       <i class="fa-solid fa-wand-magic-sparkles"></i>
       <span>Work</span>
     </a>
-    <a href="#work" class="nav-item" data-target="work">
+    <a href="#experence" class="nav-item" data-target="work">
       <i class="fas fa-briefcase"></i>
       <span>Experiences</span>
     </a>
