--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <link rel="stylesheet" href="assets/css/skins/color-1.css">
   <link rel="stylesheet" href="assets/css/button.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   <title>Akash Palandagama | UX Develoepr</title>
   <link rel="shortcut icon" href="assets/images/akash-palandagama.jpg">
+
 </head>
 
 <body>
@@ -70,7 +72,7 @@
           <!-- Latest Projects Scection Start -->
           <div class="section-padding" id="work">
 
-            <h1 class="fs-3x fw-bold mb-md-15 mb-10">👨‍💻 Explore Work</h1>
+            <h1 class="fs-3x fw-bold mb-md-20 mb-10">🪄 Explore Work</h1>
             <div class="row">
               <div class="col-md-6 col-12 mb-10">
                 <div
@@ -172,30 +174,32 @@
 
           <!-- Experence -->
           <div class="section-padding" id="experience">
-            <h1 class="fs-3x fw-bold mb-md-15 mb-10">👨‍💻 Experence</h1>
+            <h1 class="fs-3x fw-bold mb-md-20 mb-10">👨🏻‍💻 Experence</h1>
             <div class="row">
               <div class="col-12 mb-10 mb-md-15">
                 <div class="d-flex align-items-center mb-5">
-                  <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5">
+                  <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5 ">
                     <img src="assets/images/logos/aue-logo.png" class="h-45px" alt="" />
                   </div>
                   <div class="">
                     <div class="fs-2 fw-semibold">User Experence Developer</div>
-                    <div class="fs-5 text-gray-600">Amarican University in the Emirates | October 2023 - Recent
+                    <div class="fs-5 text-gray-500">Amarican University in the Emirates [ October 2023 - Recent ]
                     </div>
                   </div>
 
                 </div>
-                <div class="fw-semibold text-gray-700 fs-5">
+                <div class="fw-normal text-gray-700 fs-5">
                   AUE is a leading university in Dubai, UAE, maintaining an in-house ERP system to manage all university
                   activities, from student registration to alumni affairs. The system covers exams, CLO & PLO
                   management, VPAA, department chairs, finance, procurement, and all essential business processes
                   required for efficient university operations. It includes key components such as the Admission &
                   Registration Database (ARD), Human Resource Management (HRM), Student and Alumni Portal, Employee
                   Portal, Learning Management System (LMS), Exam Portal, Community Portal, and Workshops with related
-                  UIs. Additionally, the ERP system supports other universities, including KCST, Umm Al Quwain
-                  University, and many more. It is a smart, all-in-one platform designed to streamline administration,
+                  platform. It is a smart, all-in-one platform designed to streamline administration,
                   enhance student success, and drive institutional growth.
+                  <br><br>
+                  <span class="fw-semibold">Other Clients : KCST - Kuwait College of Science and Technology , Umm Al
+                    Quwain University UAE</span>
                 </div>
               </div>
               <div class="col-12 mb-10 mb-md-15">
@@ -205,12 +209,11 @@
                   </div>
                   <div class="">
                     <div class="fs-2 fw-semibold">Associate UI UX Designer</div>
-                    <div class="fs-5 text-gray-600">Archnix Pvt Ltd | February 2023 - September
-                      2023</div>
+                    <div class="fs-5 text-gray-500">Archnix Pvt Ltd [ February 2023 - September 2023 ]</div>
                   </div>
 
                 </div>
-                <div class="fw-semibold text-gray-700 fs-5">
+                <div class="fw-normal text-gray-700 fs-5">
                   Archnix is a global tech company specializing in software development, digital marketing, SEO, and
                   SMM. Founded in 2020 and registered in the UK, it operates in the UK, Canada, Sri Lanka, India, and
                   the UAE. Archnix focuses on innovative digital solutions, automation, and delivering top-tier user
@@ -220,30 +223,144 @@
               <div class="col-12 mb-10 mb-md-15">
                 <div class="d-flex align-items-center mb-5">
                   <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5">
+                    <img src="assets/images/logos/fof-srilanka.png" class="h-50px w-50px" alt="" />
+                  </div>
+                  <div class="">
+                    <div class="fs-2 fw-semibold">Member</div>
+                    <div class="fs-5 text-gray-500">Friends of Figma Sri Lanka [ February 2023 - Current ]</div>
+                  </div>
+
+                </div>
+                <div class="fw-normal text-gray-700 fs-5">
+                  Friends of Figma, Sri Lanka is a non-profit community meetup group. We are helping designers to grow
+                  their network and build design skills at in-person events and in our online community. Open to
+                  everyone interested in learning more about Figma; advanced practitioners, aspiring designers and
+                  developers, and creatives of all types.
+                </div>
+              </div>
+              <div class="col-12 mb-10 mb-md-15">
+                <div class="d-flex align-items-center mb-5">
+                  <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5">
                     <img src="assets/images/logos/enhanzer-logo.png" class="h-50px" alt="" />
                   </div>
                   <div class="">
                     <div class="fs-2 fw-semibold">Intern UI UX Developer</div>
-                    <div class="fs-5 text-gray-600">Enhanzer Pvt Ltd | November 2021 - September
-                      2022</div>
+                    <div class="fs-5 text-gray-500">Enhanzer Pvt Ltd [ November 2021 - September
+                      2022 ]</div>
                   </div>
 
                 </div>
-                <div class="fw-semibold text-gray-700 fs-5">
+                <div class="fw-normal text-gray-700 fs-5">
                   Enhanzer Pvt Ltd is a Sri Lankan software company specializing in cloud-based ERP solutions and
                   digital automation. Founded in 2013 and headquartered in Colombo, it helps businesses achieve
                   sustainable growth through innovative technology and process optimization.
                 </div>
               </div>
+              <div class="col-12">
+                <div class="d-flex align-items-center mb-5">
+                  <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5">
+                    <img src="assets/images/logos/suaroma.png" class="h-50px" alt="" />
+                  </div>
+                  <div class="">
+                    <div class="fs-2 fw-semibold">Intern Digital Marketing</div>
+                    <div class="fs-5 text-gray-500">Suaroma Pvt Ltd [ May 2021 - August 2022 ] </div>
+                  </div>
+
+                </div>
+                <div class="fw-normal text-gray-700 fs-5">
+                  Suaroma specializes in holistic healing, offering therapeutic oils made from organic virgin coconut
+                  oil, certified essential oils, and natural plant extracts. Their products, aimed at promoting
+                  wellness, are available through digital platforms, ensuring access to those seeking natural health
+                  solutions. Committed to purity and quality, Suaroma provides premium organic healing alternatives.
+                </div>
+              </div>
             </div>
 
           </div>
+
+          <!-- Techstack -->
+          <div class="section-padding">
+            <h1 class="fs-3x fw-bold mb-md-20 mb-10">⚙️ Techstack & Tools for speedup my work</h1>
+            <div class="swiper mySwiper ">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="tech-item">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
+                    <span class="tech-name">Figma</span>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="tech-item">
+                    <img
+                      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
+                    <span class="tech-name">HTML</span>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="tech-item">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
+                    <span class="tech-name">CSS</span>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="tech-item">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/behance/behance-original.svg" />
+                    <span class="tech-name">Behance</span>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="tech-item">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg" />
+                    <span class="tech-name">Vs Code</span>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="tech-item">
+                    <img src="https://img.icons8.com/?size=100&id=kTuxVYRKeKEY&format=png&color=000000">
+                    <span class="tech-name">ChatGPT</span>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="tech-item">
+                    <img src="https://img.icons8.com/?size=100&id=YWOidjGxCpFW&format=png&color=000000" alt="deepseek">
+                    <span class="tech-name">Deepseek</span>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="tech-item">
+                    <img src="assets/images/logos/colors.co-logo" alt="colors.co">
+                    <span class="tech-name">Colors.co</span>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="tech-item">
+                    <div
+                      class="logo-favicon rounded-lg text-lg flex items-center justify-center font-semibold fs-3x fw-bold">
+                      UI </div>
+                    <span class="tech-name">UI Colors</span>
+
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
           <!-- Footer -->
-          <footer>
+          <footer class="">
             <div class="footer-main">
               <div class="footer-content">
                 <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
-                <p>From understanding user needs to designing seamless interfaces, I specialize in creating exceptional
+                <p>From understanding user needs to designing seamless interfaces, I specialize in creating
+                  exceptional
                   UX. Let's leverage my skills and local insight to make your product stand out 😊</p>
               </div>
             </div>
@@ -282,7 +399,7 @@
       <i class="fa-solid fa-wand-magic-sparkles"></i>
       <span>Work</span>
     </a>
-    <a href="#experence" class="nav-item" data-target="work">
+    <a href="#experence" class="nav-item" data-target="experience">
       <i class="fas fa-briefcase"></i>
       <span>Experiences</span>
     </a>
@@ -295,40 +412,35 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
     referrerpolicy="no-referrer"></script>
   <script src="./assets/js/custom/custom.js"></script>
-  <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-  <script src="assets/plugins/global/plugins.bundle.js"></script>
+  <!-- <script src="assets/js/scripts.bundle.js"></script>
+  <script src="assets/js/widgets.bundle.js"></script> -->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
   <script>
-    // Get the modal
-    var modal = document.getElementById("maintenanceModal");
-
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-
-    //Get the OK button
-    var okButton = document.getElementById("okButton");
-
-    // When the page loads, show the modal
-    window.onload = function () {
-      modal.style.display = "block";
-    }
-
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function () {
-      modal.style.display = "none";
-    }
-
-    // When the user clicks anywhere outside of the modal, close it
-    window.onclick = function (event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
+    const swiper = new Swiper('.mySwiper', {
+      loop: true,
+      speed: 4000,
+      autoplay: {
+        delay: 0, // Instant automatic transition
+        disableOnInteraction: false,
+      },
+      slidesPerView: 'auto',
+      spaceBetween: 30,
+      centeredSlides: true,
+      freeMode: true,
+      breakpoints: {
+        320: {
+          spaceBetween: 20,
+          slidesPerView: 4,
+        },
+        768: {
+          slidesPerView: 5,
+        },
+        1024: {
+          slidesPerView: 6,
+        }
       }
-    }
-
-    //When the user clicks the OK button, close the modal
-    okButton.onclick = function () {
-      modal.style.display = "none";
-    }
+    });
   </script>
 
 
