--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <div class="col-12 mb-10 mb-md-15">
             <div class="d-flex align-items-center mb-5">
               <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5 ">
-                <img src="assets/images/logos/aue-logo.png" class="h-45px" alt="" />
+                <img src="assets/images/logos/aue-logo.png" alt="" />
               </div>
               <div class="">
                 <div class="fs-2 fw-semibold">User Experience Developer</div>
@@ -223,8 +223,26 @@
           </div>
           <div class="col-12 mb-10 mb-md-15">
             <div class="d-flex align-items-center mb-5">
+              <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5 ">
+                <img src="assets/images/logos/mylogo-2.png" class="" alt="" />
+              </div>
+              <div class="">
+                <div class="fs-2 fw-semibold">Freelance UI UX Developer</div>
+                <div class="fs-5 text-gray-600">Freelance [ February 2021 - Recent ]
+                </div>
+              </div>
+
+            </div>
+            <div class="fw-normal text-gray-800 fs-5">
+              I have covered various projects in my freelance journey, including websites, mobile apps, LMS platforms,
+              and analytical tools. I specialize in creating intuitive, responsive designs that deliver seamless user
+              experiences and meet diverse client needs.
+            </div>
+          </div>
+          <div class="col-12 mb-10 mb-md-15">
+            <div class="d-flex align-items-center mb-5">
               <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5">
-                <img src="assets/images/logos/archnix-logo.png" class="h-45px w-45px" alt="" />
+                <img src="assets/images/logos/archnix-logo.png" alt="" />
               </div>
               <div class="">
                 <div class="fs-2 fw-semibold">Associate UI UX Designer</div>
@@ -242,7 +260,7 @@
           <div class="col-12 mb-10 mb-md-15">
             <div class="d-flex align-items-center mb-5">
               <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5">
-                <img src="assets/images/logos/fof-srilanka.png" class="h-50px w-50px" alt="" />
+                <img src="assets/images/logos/fof-srilanka.png" alt="" />
               </div>
               <div class="">
                 <div class="fs-2 fw-semibold">Member</div>
@@ -260,7 +278,7 @@
           <div class="col-12 mb-10 mb-md-15">
             <div class="d-flex align-items-center mb-5">
               <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5">
-                <img src="assets/images/logos/enhanzer-logo.png" class="h-50px" alt="" />
+                <img src="assets/images/logos/enhanzer-logo.png" alt="" />
               </div>
               <div class="">
                 <div class="fs-2 fw-semibold">Intern UI UX Developer</div>
@@ -278,7 +296,7 @@
           <div class="col-12">
             <div class="d-flex align-items-center mb-5">
               <div class="symbol symbol-50px bg-light-for-logo p-4 border border-gray-200 rounded-3 me-5">
-                <img src="assets/images/logos/suaroma.png" class="h-50px" alt="" />
+                <img src="assets/images/logos/suaroma.png" alt="" />
               </div>
               <div class="">
                 <div class="fs-2 fw-semibold">Intern Digital Marketing</div>
@@ -299,7 +317,7 @@
 
       <!-- Techstack -->
       <div class="section-padding">
-        <h1 class="fs-3x fw-bold mb-md-20 mb-10">⚙️ Techstack & Tools</h1>
+        <h1 class="fs-3x fw-bold mb-md-20 mb-10">⚙️ Tools for Life</h1>
         <div class="swiper mySwiper ">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -416,6 +434,10 @@
     <a href="#experence" class="nav-item" data-target="experience">
       <i class="fas fa-briefcase"></i>
       <span>Experiences</span>
+    </a>
+    <a href="#contact" class="nav-item" data-target="contact">
+      <i class="fa-solid fa-rocket"></i>
+      <span>Blog</span>
     </a>
     <a href="#contact" class="nav-item" data-target="contact">
       <i class="fas fa-envelope"></i>
