--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 
   <!-- Main Content Start -->
-  <div class="main-content">
+  <div class="main-content ">
 
     <!-- Hero Scection Start -->
-    <div class="section-padding" style="background-image: url(./assets/images/background-3.svg);background-size: cover;
+    <div class="section-padding scroll-effect" style="background-image: url(./assets/images/background-3.svg);background-size: cover;
     background-repeat: no-repeat;
     background-position: center;" id="about">
 
@@ -37,8 +37,8 @@
         </div>
 
         <!-- hero text -->
-        <div class="mb-10">
-          <div class="fs-2hx fw-bold mb-8 text-gray-800">
+        <div class="mb-20">
+          <div class="fs-2hx fw-semibold mb-8 text-gray-800 pc-view" style="line-height: 1.2;">
             A User Experience Developer
             <br>with 4 years of hands on experience,
             <br>helping SaaS and ERP companies enhance
@@ -46,8 +46,20 @@
             <br> UX and User Centered design.
           </div>
 
-          <div class="fs-2 fw-normal text-gray-700 mb-6">
+          <div class="fs-2 fw-normal text-gray-700 mb-6 pc-view">
             👋 Hello, I'm Akash Palandagama. I craft user-friendly interfaces with a
+            developer’s mindset because
+            good design isn’t just about
+            looking fancy, it’s about working smoothly. Every pixel has a purpose, every feature meets a need.
+          </div>
+
+          <div class="fs-2hx fw-semibold mb-8 text-gray-800 mobile-view" style="line-height: 1.2;">
+            A UX Developer with 4 years <br> of hands on experience, helping <br>SaaS and ERP companies enhance and
+            increase conversions through strategic UX and User Centered design.
+          </div>
+
+          <div class="fs-2 fw-normal text-gray-700 mb-6 mobile-view">
+            👋 Hello, I'm Akash Palandagama. <br>I craft user-friendly interfaces with a
             developer’s mindset because
             good design isn’t just about
             looking fancy, it’s about working smoothly. Every pixel has a purpose, every feature meets a need.
@@ -55,10 +67,86 @@
 
         </div>
 
+
         <!-- CTA -->
-        <div class="d-flex">
-          <a href="#work" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Exlore Work</a>
-          <a href="https://cal.com/akash-palandagama/30min" class="btn-2 btn-2-light btn-2-lg fs-6"></i>Book a meet</a>
+        <div class="text-center" style="margin-bottom: 100px;">
+          <a href="#work" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">See My Work</a>
+          <a href="https://cal.com/akash-palandagama/30min" class="btn-2 btn-2-light btn-2-lg fs-6"></i>Set Up a Call</a>
+        </div>
+
+        <!-- Techstack -->
+        <div class="scroll-effect">
+          <div class="swiper mySwiper ">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="tech-item">
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
+                  <span class="tech-name">Figma</span>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="tech-item">
+                  <img
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
+                  <span class="tech-name">HTML</span>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="tech-item">
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
+                  <span class="tech-name">CSS</span>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="tech-item">
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/behance/behance-original.svg" />
+                  <span class="tech-name">Behance</span>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="tech-item">
+                  <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg" />
+                  <span class="tech-name">Vs Code</span>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="tech-item">
+                  <img src="https://img.icons8.com/?size=100&id=kTuxVYRKeKEY&format=png&color=000000">
+                  <span class="tech-name">ChatGPT</span>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="tech-item">
+                  <img src="https://img.icons8.com/?size=100&id=YWOidjGxCpFW&format=png&color=000000" alt="deepseek">
+                  <span class="tech-name">Deepseek</span>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="tech-item">
+                  <img src="assets/images/logos/colors.co-logo" alt="colors.co">
+                  <span class="tech-name">Colors.co</span>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="tech-item">
+                  <div
+                    class="logo-favicon rounded-lg text-lg flex items-center justify-center font-semibold fs-3x fw-bold">
+                    UI </div>
+                  <span class="tech-name">UI Colors</span>
+
+                </div>
+              </div>
+
+            </div>
+          </div>
         </div>
       </div>
 
@@ -68,7 +156,7 @@
     <div class="container">
 
       <!-- Latest Projects Scection Start -->
-      <div class="section-padding" id="work">
+      <div class="section-padding-2 scroll-effect" id="work">
 
         <h1 class="fs-3x fw-bold mb-md-20 mb-10">🪄 Explore Work</h1>
         <div class="row">
@@ -195,7 +283,7 @@
       </div>
 
       <!-- Experience -->
-      <div class="section-padding" id="experience">
+      <div class="section-padding scroll-effect" id="experience">
         <h1 class="fs-3x fw-bold mb-md-20 mb-10">👨🏻‍💻 Experiences</h1>
         <div class="row">
           <div class="col-12 mb-10 mb-md-15">
@@ -315,81 +403,7 @@
 
       </div>
 
-      <!-- Techstack -->
-      <div class="section-padding">
-        <h1 class="fs-3x fw-bold mb-md-20 mb-10">⚙️ Tools for Life</h1>
-        <div class="swiper mySwiper ">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="tech-item">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
-                <span class="tech-name">Figma</span>
-              </div>
-            </div>
 
-            <div class="swiper-slide">
-              <div class="tech-item">
-                <img
-                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
-                <span class="tech-name">HTML</span>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="tech-item">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
-                <span class="tech-name">CSS</span>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="tech-item">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/behance/behance-original.svg" />
-                <span class="tech-name">Behance</span>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="tech-item">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg" />
-                <span class="tech-name">Vs Code</span>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="tech-item">
-                <img src="https://img.icons8.com/?size=100&id=kTuxVYRKeKEY&format=png&color=000000">
-                <span class="tech-name">ChatGPT</span>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="tech-item">
-                <img src="https://img.icons8.com/?size=100&id=YWOidjGxCpFW&format=png&color=000000" alt="deepseek">
-                <span class="tech-name">Deepseek</span>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="tech-item">
-                <img src="assets/images/logos/colors.co-logo" alt="colors.co">
-                <span class="tech-name">Colors.co</span>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="tech-item">
-                <div
-                  class="logo-favicon rounded-lg text-lg flex items-center justify-center font-semibold fs-3x fw-bold">
-                  UI </div>
-                <span class="tech-name">UI Colors</span>
-
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
 
       <!-- Footer -->
       <footer class="">
@@ -451,6 +465,7 @@
   <!-- <script src="assets/js/scripts.bundle.js"></script>
   <script src="assets/js/widgets.bundle.js"></script> -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
 
   <script>
     const swiper = new Swiper('.mySwiper', {
