--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="assets/css/custom.css">
   <link rel="stylesheet" href="assets/css/style.bundle.css">
-  <link rel="stylesheet" href="assets/css/skins/color-1.css">
   <link rel="stylesheet" href="assets/css/button.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -71,7 +70,8 @@
         <!-- CTA -->
         <div class="text-center" style="margin-bottom: 100px;">
           <a href="#work" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">See My Work</a>
-          <a href="https://cal.com/akash-palandagama/30min" class="btn-2 btn-2-light btn-2-lg fs-6"></i>Set Up a Call</a>
+          <a href="https://cal.com/akash-palandagama/30min" class="btn-2 btn-2-light btn-2-lg fs-6"></i>Set Up a
+            Call</a>
         </div>
 
         <!-- Techstack -->
@@ -279,6 +279,10 @@
             </div>
           </div>
 
+          <div class="text-center">
+            <a href="all-projects.html" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Explore All Projects</a>
+          </div>
+
         </div>
       </div>
 
@@ -403,12 +407,23 @@
 
       </div>
 
-
+      <!-- <div class="outer mb-10">
+        <div class="dot"></div>
+        <div class="card-3">
+          <div class="ray"></div>
+          <div class="text">750k</div>
+          <div>Views</div>
+          <div class="line topl"></div>
+          <div class="line leftl"></div>
+          <div class="line bottoml"></div>
+          <div class="line rightl"></div>
+        </div>
+      </div> -->
 
       <!-- Footer -->
-      <footer class="">
-        <div class="footer-main">
-          <div class="footer-content">
+      <footer class="scroll-effect">
+        <div class="footer-main ">
+          <div class="footer-content ">
             <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
             <p>From understanding user needs to designing seamless interfaces, I specialize in creating
               exceptional
@@ -449,7 +464,7 @@
       <i class="fas fa-briefcase"></i>
       <span>Experiences</span>
     </a>
-    <a href="#contact" class="nav-item" data-target="contact">
+    <a href="blog.html" class="nav-item" onclick="openBlogPage(); return false;">
       <i class="fa-solid fa-rocket"></i>
       <span>Blog</span>
     </a>
@@ -468,6 +483,9 @@
 
 
   <script>
+    function openBlogPage() {
+      window.location.href = "./blog.html";
+    }
     const swiper = new Swiper('.mySwiper', {
       loop: true,
       speed: 4000,
