--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
 
         <!-- CTA -->
         <div class="text-center" style="margin-bottom: 100px;">
-          <a href="#work" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">See My Work</a>
-          <a href="https://cal.com/akash-palandagama/30min" class="btn-2 btn-2-light btn-2-lg fs-6"></i>Set Up a
-            Call</a>
+          <a href="#" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Want a Peek into My Life?</a>
+          <a href="https://cal.com/akash-palandagama/30min" class="btn-2 btn-2-light btn-2-lg fs-6"></i>Set Up a Call</a>
         </div>
 
         <!-- Techstack -->
@@ -287,7 +286,7 @@
       </div>
 
       <!-- Experience -->
-      <div class="section-padding scroll-effect" id="experience">
+      <div class="section-padding-3 scroll-effect" id="experience">
         <h1 class="fs-3x fw-bold mb-md-20 mb-10">👨🏻‍💻 Experiences</h1>
         <div class="row">
           <div class="col-12 mb-10 mb-md-15">
@@ -420,8 +419,188 @@
         </div>
       </div> -->
 
+      <!-- Feedbacks -->
+      <section class="feedback-section section-padding-3 scroll-effect">
+        <h1 class="fs-3x fw-bold mb-md-20 mb-10">💁🏻‍♂️ Words from Others</h1>
+
+        <div class="swipe-container row-1">
+          <!-- Original Cards -->
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/tishan-wijekoon.jpg" class="symbol-label" alt="">
+                </div>
+              </div>
+              <div>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Solar Gems Pvt Ltd</p>
+                <p>Managing Director</p>
+              </div>
+            </div>
+            <p class="mb-0">Improved the GEM and Jewelry ERP system, enhancing marketing strategies and
+              performance based on client feedback.
+            </p>
+          </div>
+
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/ramesh-chathuranga.png" class="symbol-label" alt="">
+                </div>
+              </div>
+              <div>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Archnix Pvt Ltd</p>
+                <p>Team Lead - Mobile Application</p>
+              </div>
+            </div>
+            <p class="mb-0">Akash is good team player and skillful designer and front end developer. Highly
+              recommended his work .</p>
+          </div>
+
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/prabash-prasanna.png" class="symbol-label" alt="">
+                </div>
+              </div>
+              <div>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Archnix Pvt Ltd</p>
+                <p>Team Lead - Lamp Stack</p>
+              </div>
+            </div>
+            <p class="mb-0">Good team player with strong UI/UX skills, open to feedback, and collaborates
+              effectively to improve designs and user experience.</p>
+          </div>
+
+          <!-- Duplicate Cards -->
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/tishan-wijekoon.jpg" class="symbol-label" alt="">
+                </div>
+              </div>
+              <div>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Solar Gems Pvt Ltd</p>
+                <p>Managing Director</p>
+              </div>
+            </div>
+            <p class="mb-0">Improved the GEM and Jewelry ERP system, enhancing marketing strategies and
+              performance based on client feedback.
+            </p>
+          </div>
+
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/ramesh-chathuranga.png" class="symbol-label" alt="">
+                </div>
+              </div>
+              <div>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Archnix Pvt Ltd</p>
+                <p>Team Lead - Mobile Application</p>
+              </div>
+            </div>
+            <p class="mb-0">Akash is good team player and skillful designer and front end developer. Highly
+              recommended his work .</p>
+          </div>
+
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">
+                <div class="symbol symbol-45x symbol-circle">
+                  <img src="assets/images/feedbacks/prabash-prasanna.png" class="symbol-label" alt="">
+                </div>
+              </div>
+              <div>
+                <p class="fw-semibold fs-6 text-gray-800 mb-0">@Archnix Pvt Ltd</p>
+                <p>Team Lead - Lamp Stack</p>
+              </div>
+            </div>
+            <p class="mb-0">Good team player with strong UI/UX skills, open to feedback, and collaborates
+              effectively to improve designs and user experience.</p>
+          </div>
+
+        </div>
+
+        <!-- Second Row (Right to Left) -->
+        <div class="swipe-container row-2">
+          <!-- Original Cards -->
+          <!-- <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">ID</div>
+              <div>
+                <p class="user-handle">@InspiredDesigns</p>
+                <p>Web Designer</p>
+              </div>
+            </div>
+            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
+          </div>
+
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">ID</div>
+              <div>
+                <p class="user-handle">@InspiredDesigns</p>
+                <p>Web Designer</p>
+              </div>
+            </div>
+            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
+          </div>
+
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">ID</div>
+              <div>
+                <p class="user-handle">@InspiredDesigns</p>
+                <p>Web Designer</p>
+              </div>
+            </div>
+            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
+          </div> -->
+
+          <!-- Duplicate Cards -->
+          <!-- <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">ID</div>
+              <div>
+                <p class="user-handle">@InspiredDesigns</p>
+                <p>Web Designer</p>
+              </div>
+            </div>
+            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
+          </div>
+
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">ID</div>
+              <div>
+                <p class="user-handle">@InspiredDesigns</p>
+                <p>Web Designer</p>
+              </div>
+            </div>
+            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
+          </div>
+
+          <div class="feedback-card">
+            <div class="user-info">
+              <div class="user-avatar">ID</div>
+              <div>
+                <p class="user-handle">@InspiredDesigns</p>
+                <p>Web Designer</p>
+              </div>
+            </div>
+            <p class="feedback-text">A well-thought-out template that made my workflow seamless.</p>
+          </div> -->
+        </div>
+
+      </section>
+
       <!-- Footer -->
-      <footer class="scroll-effect">
+      <footer class="scroll-effect" id="contact">
         <div class="footer-main ">
           <div class="footer-content ">
             <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
@@ -456,17 +635,13 @@
       <i class="fas fa-smile"></i>
       <span>About</span>
     </a>
-    <a href="#about" class="nav-item" data-target="work">
+    <a href="#work" class="nav-item" data-target="work">
       <i class="fa-solid fa-wand-magic-sparkles"></i>
       <span>Work</span>
     </a>
     <a href="#experence" class="nav-item" data-target="experience">
       <i class="fas fa-briefcase"></i>
       <span>Experiences</span>
-    </a>
-    <a href="blog.html" class="nav-item" onclick="openBlogPage(); return false;">
-      <i class="fa-solid fa-rocket"></i>
-      <span>Blog</span>
     </a>
     <a href="#contact" class="nav-item" data-target="contact">
       <i class="fas fa-envelope"></i>
@@ -511,7 +686,6 @@
       }
     });
   </script>
-
 
 </body>
 
