--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <title>Akash Palandagama | UX Develoepr</title>
   <link rel="shortcut icon" href="assets/images/akash-palandagama.jpg">
 
+
 </head>
 
 <body>
@@ -24,14 +25,14 @@
   <div class="main-content ">
 
     <!-- Hero Scection Start -->
-    <div class="section-padding scroll-effect" style="background-image: url(./assets/images/background-3.svg);background-size: cover;
+    <div class="section-padding-2 scroll-effect" style="background-image: url(./assets/images/background-3.svg);background-size: cover;
     background-repeat: no-repeat;
     background-position: center;" id="about">
 
       <div class="landing">
 
         <!-- My Image -->
-        <div class="symbol symbol-100px mb-5 symbol-circle ">
+        <div class="symbol symbol-100px mb-10 symbol-circle ">
           <img src="assets/images/akash-palandagama.jpg" class="border border-4 border-gray-100" alt="" />
         </div>
 
@@ -69,8 +70,9 @@
 
         <!-- CTA -->
         <div class="text-center" style="margin-bottom: 100px;">
-          <a href="#" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Want a Peek into My Life?</a>
-          <a href="https://cal.com/akash-palandagama/30min" class="btn-2 btn-2-light btn-2-lg fs-6"></i>Set Up a Call</a>
+          <a href="/blog.html" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Want a Peek into My Life?</a>
+          <a href="https://cal.com/akash-palandagama/30min" class="btn-2 btn-2-light btn-2-lg fs-6"></i>Set Up a
+            Call</a>
         </div>
 
         <!-- Techstack -->
@@ -155,7 +157,7 @@
     <div class="container">
 
       <!-- Latest Projects Scection Start -->
-      <div class="section-padding-2 scroll-effect" id="work">
+      <div class="section-padding-3 scroll-effect" id="work">
 
         <h1 class="fs-3x fw-bold mb-md-20 mb-10">🪄 Explore Work</h1>
         <div class="row">
@@ -286,7 +288,7 @@
       </div>
 
       <!-- Experience -->
-      <div class="section-padding-3 scroll-effect" id="experience">
+      <div class="section-padding scroll-effect" id="experience">
         <h1 class="fs-3x fw-bold mb-md-20 mb-10">👨🏻‍💻 Experiences</h1>
         <div class="row">
           <div class="col-12 mb-10 mb-md-15">
@@ -406,21 +408,8 @@
 
       </div>
 
-      <!-- <div class="outer mb-10">
-        <div class="dot"></div>
-        <div class="card-3">
-          <div class="ray"></div>
-          <div class="text">750k</div>
-          <div>Views</div>
-          <div class="line topl"></div>
-          <div class="line leftl"></div>
-          <div class="line bottoml"></div>
-          <div class="line rightl"></div>
-        </div>
-      </div> -->
-
       <!-- Feedbacks -->
-      <section class="feedback-section section-padding-3 scroll-effect">
+      <section class="feedback-section section-padding-2 scroll-effect">
         <h1 class="fs-3x fw-bold mb-md-20 mb-10">💁🏻‍♂️ Words from Others</h1>
 
         <div class="swipe-container row-1">
@@ -600,7 +589,7 @@
       </section>
 
       <!-- Footer -->
-      <footer class="scroll-effect" id="contact">
+      <footer class="scroll-effect section-padding-2" id="contact">
         <div class="footer-main ">
           <div class="footer-content ">
             <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
