--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
 
         <!-- CTA -->
-        <div class="text-center" style="margin-bottom: 100px;">
-          <a href="/blog.html" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Want a Peek into My Life?</a>
+        <div class="text-md-center text-start" style="margin-bottom: 100px;">
+          <a href="#" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Want a Peek into My Life?</a>
           <a href="https://cal.com/akash-palandagama/30min" class="btn-2 btn-2-light btn-2-lg fs-6"></i>Set Up a
             Call</a>
         </div>
