--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <!-- hero text -->
-        <div class="mb-20">
+        <div class="mb-md-20 mb-10">
           <div class="fs-2hx fw-semibold mb-8 text-gray-800 pc-view" style="line-height: 1.2;">
             A User Experience Developer
             <br>with 4 years of hands on experience,
@@ -58,7 +58,7 @@
             increase conversions through strategic UX and User Centered design.
           </div>
 
-          <div class="fs-2 fw-normal text-gray-700 mb-6 mobile-view">
+          <div class="fs-2 fw-normal text-gray-700 mobile-view">
             👋 Hello, I'm Akash Palandagama. <br>I craft user-friendly interfaces with a
             developer’s mindset because
             good design isn’t just about
@@ -66,8 +66,7 @@
           </div>
 
         </div>
-
-
+        
         <!-- CTA -->
         <div class="text-md-center text-start" style="margin-bottom: 100px;">
           <a href="#" class="btn-2 btn-2-dark btn-2-lg fs-6 me-2">Want a Peek into My Life?</a>
