--- a/all-projects.html
+++ b/all-projects.html
@@ -30,26 +30,11 @@
         <a href="index.html" class="btn-2 btn-2-light btn-2-lg"><i
             class="fa-solid fa-arrow-left me-2 fs-4 text-gray-700"></i>Go Back</a>
       </div>
-      <!-- 
-      <div class="d-flex justify-content-center">
-        <div class="outer mb-20">
-          <div class="dot"></div>
-          <div class="card-3">
-            <div class="ray"></div>
-            <div class="text">20+</div>
-            <div>Projects</div>
-            <div class="line topl"></div>
-            <div class="line leftl"></div>
-            <div class="line bottoml"></div>
-            <div class="line rightl"></div>
-          </div>
-        </div>
-      </div> -->
 
       <!-- Latest Projects Scection Start -->
-      <div class="section-padding-2" id="work">
+      <div class="mb-0">
 
-        <h1 class="fs-3x fw-bold ">Portfolio of My Workk</h1>
+        <h1 class="fs-3x fw-bold mb-10 mb-md-20">👨🏻‍💻 Portfolio of My Work</h1>
         <div class="row">
           <div class="col-md-6 col-12 mb-10">
             <div class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
@@ -106,9 +91,9 @@
               <img src="./assets/images/projects-banners/anatomea.png" class="h-400px mt-20 ms-20 hover-scale" alt="">
             </div>
             <div class="mb-5">
-              <span class="badge-3 badge-3-yellow">SaaS</span>
+              <span class="badge-3 badge-3-yellow me-2">SaaS</span>
               <span class="badge-3 badge-3-red me-2">Analytical Tool</span>
-              <span class="badge-3 badge-3-purple me-2">AI Based</span>
+              <span class="badge-3 badge-3-purple">AI Based</span>
             </div>
             <div class="fw-bold fs-3 mb-1">Anatomea</div>
             <div class="fw-normal fs-4">Anatomea is an AI-related tool that runs and analyzes campaigns and sales
